[package]
name        = "http-quik"
version     = "0.1.0"
edition     = "2021"
license     = "Apache-2.0"
description = "High-fidelity, stealth-optimized HTTP transport engine for Chrome 134 identity parity."
repository  = "https://github.com/polymit/quik"
homepage    = "https://github.com/polymit/quik"
documentation = "https://docs.rs/http-quik"
readme      = "README.md"
keywords    = ["http2", "boringssl", "stealth", "fingerprinting", "tls"]
categories  = ["network-programming", "web-programming"]


[dependencies]
# Networking & TLS (BoringSSL stack)
boring       = "4"
boring-sys   = "4"
tokio-boring = "4"
http2        = { version = "0.5", features = ["unstable"] } # Fingerprint-capable fork

# Core Async & Types
tokio = { version = "1", features = ["full"] }
http  = "1"
bytes = "1"

# Web Protocols & Parsing
url          = "2"
publicsuffix = "2"
cookie       = "0.18"
cookie_store = "0.21"

# Infrastructure
socket2   = "0.5"
dashmap   = "5"
thiserror = "2"
tracing   = "0.1"

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
brotli = "7"
libc = "0.2"
foreign-types = "0.5.0"
zstd = "0.13.3"
brotli-decompressor = "5.0.0"
flate2 = "1"

[dev-dependencies]
tokio    = { version = "1", features = ["full", "test-util"] }
tracing-subscriber = "0.3.23"
wiremock = "0.6"

[[test]]
name = "fingerprint"
path = "tests/fingerprint.rs"

[[test]]
name = "context_headers"
path = "tests/context_headers.rs"

[[test]]
name = "redirect_chain"
path = "tests/redirect_chain.rs"

[[test]]
name = "waf_scenarios"
path = "tests/waf_scenarios.rs"
